# AMmorph

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  README.md  azure-pipelines.yml  pyproject.toml  setup.cfg
.github/workflows/: python-package-conda.yml
docs/: conf.py  index.rst
docs/chapters/reference/: assembly.rst  evaluation.rst  handler.rst  index.rst  rbfstring.rst  stage.rst  study.rst
src/ammorph/: __init__.py  assembly.py  evaluation.py  handler.py  parameters.py  rbf_string.py  rbfstring.py  stage.py  study.py
tests/: test_assembly.py  test_evaluation.py  test_parameters.py  test_radial_stretch_deformation_handler.py  test_sparse_assembly.py
